--- a/pages/17092.html
+++ b/pages/17092.html
@@ -292,7 +292,7 @@ margin-left: 0em;
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8424/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8424/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -537,34 +537,50 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents_2'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>The <em>equivariant Whitehead theorem</em> is the generalization of the <a class='existingWikiWord' href='/nlab/show/Whitehead+theorem'>Whitehead theorem</a> from (<a class='existingWikiWord' href='/nlab/show/stable+homotopy+theory'>stable</a>) <a class='existingWikiWord' href='/nlab/show/homotopy'>homotopy</a> to (<a class='existingWikiWord' href='/nlab/show/equivariant+stable+homotopy+theory'>stable</a>) <a class='existingWikiWord' href='/nlab/show/equivariant+homotopy+theory'>equivariant homotopy theory</a>.</p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_fb85bb3cc482df54564086e1e1b9b8e93c80f930_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/homotopy+equivalence'>Homotopy equivalences</a> <math class='maruku-mathml' display='inline' id='mathml_fb85bb3cc482df54564086e1e1b9b8e93c80f930_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo lspace='verythinmathspace'>:</mo><mi>X</mi><mo>⟶</mo><mi>Y</mi></mrow><annotation encoding='application/x-tex'>f \colon X \longrightarrow Y</annotation></semantics></math> between <a class='existingWikiWord' href='/nlab/show/G-CW+complex'>G-CW complexes</a> are equivalent to maps that induce <a class='existingWikiWord' href='/nlab/show/weak+homotopy+equivalence'>weak homotopy equivalences</a> <math class='maruku-mathml' display='inline' id='mathml_fb85bb3cc482df54564086e1e1b9b8e93c80f930_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>f</mi> <mi>H</mi></msup><mo lspace='verythinmathspace'>:</mo><msup><mi>X</mi> <mi>H</mi></msup><mo>⟶</mo><msup><mi>Y</mi> <mi>H</mi></msup></mrow><annotation encoding='application/x-tex'>f^H \colon X^H \longrightarrow Y^H</annotation></semantics></math> on all <a class='existingWikiWord' href='/nlab/show/fixed+point'>fixed point</a> spaces for all <a class='existingWikiWord' href='/nlab/show/closed+subspace'>closed</a> <a class='existingWikiWord' href='/nlab/show/subgroup'>subgroups</a> <math class='maruku-mathml' display='inline' id='mathml_fb85bb3cc482df54564086e1e1b9b8e93c80f930_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>H</mi><mo>↪</mo><mi>G</mi></mrow><annotation encoding='application/x-tex'>H \hookrightarrow G</annotation></semantics></math> (<a href='#GreenleesMay95'>Greenlees-May 95, p. 7</a>, <a href='#Blumberg17'>Blumberg 17, corollary 1.2.14</a>).</p>
+<p><math class='maruku-mathml' display='inline' id='mathml_fd5bd70456b6d37ffa13ea1134088e88557df0de_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/homotopy+equivalence'>Homotopy equivalences</a> <math class='maruku-mathml' display='inline' id='mathml_fd5bd70456b6d37ffa13ea1134088e88557df0de_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo lspace='verythinmathspace'>:</mo><mi>X</mi><mo>⟶</mo><mi>Y</mi></mrow><annotation encoding='application/x-tex'>f \colon X \longrightarrow Y</annotation></semantics></math> between <a class='existingWikiWord' href='/nlab/show/G-CW+complex'>G-CW complexes</a> are equivalent to maps that induce <a class='existingWikiWord' href='/nlab/show/weak+homotopy+equivalence'>weak homotopy equivalences</a> <math class='maruku-mathml' display='inline' id='mathml_fd5bd70456b6d37ffa13ea1134088e88557df0de_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>f</mi> <mi>H</mi></msup><mo lspace='verythinmathspace'>:</mo><msup><mi>X</mi> <mi>H</mi></msup><mo>⟶</mo><msup><mi>Y</mi> <mi>H</mi></msup></mrow><annotation encoding='application/x-tex'>f^H \colon X^H \longrightarrow Y^H</annotation></semantics></math> on all <a class='existingWikiWord' href='/nlab/show/fixed+point'>fixed point</a> spaces for all <a class='existingWikiWord' href='/nlab/show/closed+subspace'>closed</a> <a class='existingWikiWord' href='/nlab/show/subgroup'>subgroups</a> <math class='maruku-mathml' display='inline' id='mathml_fd5bd70456b6d37ffa13ea1134088e88557df0de_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>H</mi><mo>↪</mo><mi>G</mi></mrow><annotation encoding='application/x-tex'>H \hookrightarrow G</annotation></semantics></math> (<a href='#Matumoto71'>Matumoto 71</a>, <a href='#Waner80'>Waner 80, theorem 3.4</a>, for review see <a href='#Blumberg17'>Blumberg 17, corollary 1.2.14</a>).</p>
 
-<p>For maps <math class='maruku-mathml' display='inline' id='mathml_fb85bb3cc482df54564086e1e1b9b8e93c80f930_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mo lspace='verythinmathspace'>:</mo><mi>E</mi><mo>⟶</mo><mi>F</mi></mrow><annotation encoding='application/x-tex'>F \colon E \longrightarrow F</annotation></semantics></math> between genuine <a class='existingWikiWord' href='/nlab/show/G-spectrum'>G-spectra</a>, they are weak equivalences (isomorphisms in the <a class='existingWikiWord' href='/nlab/show/equivariant+stable+homotopy+category'>equivariant stable homotopy category</a>) if they induce isomorphisms on all <a class='existingWikiWord' href='/nlab/show/equivariant+homotopy+group'>equivariant homotopy group</a> <a class='existingWikiWord' href='/nlab/show/Mackey+functor'>Mackey functors</a> <math class='maruku-mathml' display='inline' id='mathml_fb85bb3cc482df54564086e1e1b9b8e93c80f930_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mi>n</mi></msub><mo stretchy='false'>(</mo><mi>f</mi><mo stretchy='false'>)</mo><mo lspace='verythinmathspace'>:</mo><msub><mi>π</mi> <mi>n</mi></msub><mo stretchy='false'>(</mo><mi>E</mi><mo stretchy='false'>)</mo><mo>⟶</mo><msub><mi>π</mi> <mi>n</mi></msub><mo stretchy='false'>(</mo><mi>F</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\pi_n(f)\colon \pi_n(E) \longrightarrow \pi_n(F) </annotation></semantics></math> (e. g. <a href='#GreenleesMay95'>Greenlees-May 95, theorem 2.4</a>, <a href='#Bohmann'>Bohmann, theorem 3.2</a>).</p>
+<p>For maps <math class='maruku-mathml' display='inline' id='mathml_fd5bd70456b6d37ffa13ea1134088e88557df0de_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mo lspace='verythinmathspace'>:</mo><mi>E</mi><mo>⟶</mo><mi>F</mi></mrow><annotation encoding='application/x-tex'>F \colon E \longrightarrow F</annotation></semantics></math> between genuine <a class='existingWikiWord' href='/nlab/show/G-spectrum'>G-spectra</a>, they are weak equivalences (isomorphisms in the <a class='existingWikiWord' href='/nlab/show/equivariant+stable+homotopy+category'>equivariant stable homotopy category</a>) if they induce isomorphisms on all <a class='existingWikiWord' href='/nlab/show/equivariant+homotopy+group'>equivariant homotopy group</a> <a class='existingWikiWord' href='/nlab/show/Mackey+functor'>Mackey functors</a> <math class='maruku-mathml' display='inline' id='mathml_fd5bd70456b6d37ffa13ea1134088e88557df0de_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mi>n</mi></msub><mo stretchy='false'>(</mo><mi>f</mi><mo stretchy='false'>)</mo><mo lspace='verythinmathspace'>:</mo><msub><mi>π</mi> <mi>n</mi></msub><mo stretchy='false'>(</mo><mi>E</mi><mo stretchy='false'>)</mo><mo>⟶</mo><msub><mi>π</mi> <mi>n</mi></msub><mo stretchy='false'>(</mo><mi>F</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\pi_n(f)\colon \pi_n(E) \longrightarrow \pi_n(F) </annotation></semantics></math> (e. g. <a href='#GreenleesMay95'>Greenlees-May 95, theorem 2.4</a>, <a href='#Bohmann'>Bohmann, theorem 3.2</a>).</p>
+
+<h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Elmendorf%27s+theorem'>Elmendorf&#39;s theorem</a></li>
+</ul>
 
 <h2 id='references'>References</h2>
 
+<p>The original proof seems to be due to</p>
+
 <ul>
-<li id='Blumberg17'>
-<p><a class='existingWikiWord' href='/nlab/show/Andrew+Blumberg'>Andrew Blumberg</a>, <em>Euivariant homotopy theory</em>, 2017 (<a href='https://www.ma.utexas.edu/users/a.debray/lecture_notes/m392c_EHT_notes.pdf'>pdf</a>)</p>
-</li>
+<li id='Matumoto71'>T. Matumoto, <em>Equivariant K-theory and Fredholm operators, J. Fac. Sci. Tokyo 18 (1971/72), 109-112 (<a href='http://jairo.nii.ac.jp/0021/00002586/en'>jairo</a>)</em></li>
+</ul>
 
-<li id='GreenleesMay95'>
-<p><a class='existingWikiWord' href='/nlab/show/John+Greenlees'>John Greenlees</a>, <a class='existingWikiWord' href='/nlab/show/Peter+May'>Peter May</a>, <em>Equivariant stable homotopy theory</em>, in <a class='existingWikiWord' href='/nlab/show/Ioan+James'>Ioan Mackenzie James</a> (ed.), <em><a class='existingWikiWord' href='/nlab/show/Handbook+of+Algebraic+Topology'>Handbook of Algebraic Topology</a></em> , pp. 279-325. 1995. (<a href='http://www.math.uchicago.edu/~may/PAPERS/Newthird.pdf'>pdf</a>)</p>
-</li>
+<p>streamlined in</p>
 
-<li id='Bohmann'>
-<p><a class='existingWikiWord' href='/nlab/show/Anna+Marie+Bohmann'>Anna Marie Bohmann</a>, <em>Basic notions of equivariant stable homotopy theory</em>, (<a href='http://math.northwestern.edu/~bohmann/basicequivnotions.pdf'>pdf</a>)</p>
-</li>
+<ul>
+<li id='Waner80'><a class='existingWikiWord' href='/nlab/show/Stefan+Waner'>Stefan Waner</a>, <em>Equivariant Homotopy Theory and Milnor’s Theorem</em>, Transactions of the American Mathematical Society Vol. 258, No. 2 (Apr., 1980), pp. 351-368 (<a href='http://www.jstor.org/stable/1998061'>JSTOR</a>)</li>
+</ul>
+
+<p>and reviewed in</p>
+
+<ul>
+<li id='Blumberg17'><a class='existingWikiWord' href='/nlab/show/Andrew+Blumberg'>Andrew Blumberg</a>, <em>Equivariant homotopy theory</em>, 2017 (<a href='https://www.ma.utexas.edu/users/a.debray/lecture_notes/m392c_EHT_notes.pdf'>pdf</a>)</li>
+</ul>
+
+<p>For the stable case:</p>
+
+<ul>
+<li id='Bohmann'><a class='existingWikiWord' href='/nlab/show/Anna+Marie+Bohmann'>Anna Marie Bohmann</a>, <em>Basic notions of equivariant stable homotopy theory</em>, (<a href='http://math.northwestern.edu/~bohmann/basicequivnotions.pdf'>pdf</a>)</li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Revised on April 12, 2018 11:44:58
+  Revised on April 12, 2018 13:59:00
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (91.230.41.206).
   See <a href="https://ncatlab.org/nlab/author/Urs Schreiber" style="color: #005c19">Author — Urs Schreiber</a> for an overview of the nLab pages to which Urs Schreiber has contributed.
@@ -572,7 +588,7 @@ margin-left: 0em;
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/equivariant+Whitehead+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+Whitehead+theorem/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/equivariant+Whitehead+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+Whitehead+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/equivariant+Whitehead+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+Whitehead+theorem/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/equivariant+Whitehead+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+Whitehead+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
 
   <span class="views">
     | Views:
