--- a/pages/4908.html
+++ b/pages/4908.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -330,23 +328,26 @@ margin-left: 0em;
 
 <p>
  
+ 
+ 
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on October 11, 2015 16:53:23 
-  by <a class="existingWikiWord" href="/nlab/show/Todd+Trimble">Todd Trimble</a>
-  (67.81.95.215)
+  Revised on April 12, 2018 15:21:34
+  by <a class="existingWikiWord" href="/nlab/show/Richard+Williamson">Richard Williamson</a>
+  (84.202.247.109).
+  See <a href="https://ncatlab.org/nlab/author/Richard Williamson" style="color: #005c19">Author — Richard Williamson</a> for an overview of the nLab pages to which Richard Williamson has contributed.
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Ji%C5%99%C3%AD+Ad%C3%A1mek" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Ji%C5%99%C3%AD+Ad%C3%A1mek/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Ji%C5%99%C3%AD+Ad%C3%A1mek" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Ji%C5%99%C3%AD+Ad%C3%A1mek" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Ji%C5%99%C3%AD+Ad%C3%A1mek" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Ji%C5%99%C3%AD+Ad%C3%A1mek/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Ji%C5%99%C3%AD+Ad%C3%A1mek" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Ji%C5%99%C3%AD+Ad%C3%A1mek" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Ji%C5%99%C3%AD+Ad%C3%A1mek" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Ji%C5%99%C3%AD+Ad%C3%A1mek" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Ji%C5%99%C3%AD+Ad%C3%A1mek" id="view_source" rel="nofollow">Source</a>
