--- a/pages/9344.html
+++ b/pages/9344.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -560,7 +558,7 @@ margin-left: 0em;
 
 <p>A <em>homotopy quotient</em> is a <a class='existingWikiWord' href='/nlab/show/quotient+object'>quotient</a> (say of a <a class='existingWikiWord' href='/nlab/show/group'>group</a> <a class='existingWikiWord' href='/nlab/show/action'>action</a>) in the context of <em><a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a></em>.</p>
 
-<p>Hust as a <a class='existingWikiWord' href='/nlab/show/quotient+object'>quotient</a> is a special case of <a class='existingWikiWord' href='/nlab/show/colimit'>colimit</a>, so a homotopy quotient is a special case of <a class='existingWikiWord' href='/nlab/show/homotopy+limit'>homotopy colimit</a>.</p>
+<p>Just as a <a class='existingWikiWord' href='/nlab/show/quotient+object'>quotient</a> is a special case of <a class='existingWikiWord' href='/nlab/show/colimit'>colimit</a>, so a homotopy quotient is a special case of <a class='existingWikiWord' href='/nlab/show/homotopy+limit'>homotopy colimit</a>.</p>
 
 <p>The homotopy quotient of a <a class='existingWikiWord' href='/nlab/show/group'>group</a> <a class='existingWikiWord' href='/nlab/show/action'>action</a> may be modeled by the corresponding <em><a class='existingWikiWord' href='/nlab/show/action+groupoid'>action groupoid</a></em>, which in the context of <a class='existingWikiWord' href='/nlab/show/higher+geometry'>higher geometry</a> means the corresponding <em><a class='existingWikiWord' href='/nlab/show/quotient+stack'>quotient stack</a></em>.</p>
 
@@ -600,19 +598,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 29, 2018 03:06:45 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (213.30.232.146)
+  Revised on April 12, 2018 17:03:01
+  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
+  (128.189.79.33).
+  See <a href="https://ncatlab.org/nlab/author/Anonymous" style="color: #005c19">Author — Anonymous</a> for an overview of the nLab pages to which Anonymous has contributed.
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/homotopy+quotient" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/homotopy+quotient/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/homotopy+quotient" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/homotopy+quotient" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/homotopy+quotient" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/homotopy+quotient/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/homotopy+quotient" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/homotopy+quotient" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/homotopy+quotient" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/homotopy+quotient" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/homotopy+quotient" id="view_source" rel="nofollow">Source</a>
